[package]
name = "rust-algorithm"
version = "0.1.4"
authors = ["pefish <pefish@qq.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pefish/rust-algorithm"
documentation = "https://pefish.github.io/rust-algorithm/rust_algorithm/"
homepage = "https://github.com/pefish/rust-algorithm"
description = """
algorithm
"""
keywords = ["algorithm"]
categories = ["algorithms"]
exclude = ["docs", "/.travis.yml", "/appveyor.yml", ".gitignore"]
autobenches = true
edition = "2018"

[dependencies]

[package.metadata.scripts]
build = "rm -rf docs && cargo doc && mv target/doc/ docs/ && cargo build"
publish = "cargo exec build && cargo test && cargo publish --allow-dirty"
example = "cargo run --example main"
